added ImportAllChatsCli and gradle task.